--- a/js-curso-3/carrinho-compras/index.html
+++ b/js-curso-3/carrinho-compras/index.html
@@ -57,14 +57,13 @@
 
       <section class="carrinho__produtos" id="lista-produtos">
         <section class="carrinho__produtos__produto">
-          <span class="texto-azul">1x</span> Celular <span class="texto-azul">R$1400</span>
         </section>
       </section>
 
       <div class="divisoria"></div>
 
       <p class="carrinho__total">
-        Total: <span class="texto-azul" id="valor-total">R$1400</span>
+        Total: <span class="texto-azul" id="valor-total"></span>
       </p>
     </section>
   </main>
