completed challenges from carrinho-compras

--- a/js-curso-3/carrinho-compras/index.html
+++ b/js-curso-3/carrinho-compras/index.html
@@ -53,7 +53,7 @@
       <div class="titulo-wrapper">
         <img src="./assets/icone-carrinho.svg" alt="ícone de carrinho">
 
-        <h2 class="carrinho__titulo">Produtos no carrinho</h2>
+        <h2 class="carrinho__titulo" id="titulo_carrinho">Produtos no carrinho</h2>
       </div>
 
       <section class="carrinho__produtos" id="lista-produtos">
