--- a/js-curso-3/ingresso/index.html
+++ b/js-curso-3/ingresso/index.html
@@ -39,9 +39,9 @@
             <h2>Quantidade disponível</h2>
 
             <ul class="lista">
-                <li>Pista<span id="qtd-pista">100</span></li>
-                <li>Cadeira superior<span id="qtd-superior">200</span></li>
-                <li>Cadeira inferior<span id="qtd-inferior">400</span></li>
+                <li>Pista<span id="qtd-ingresso-1">100</span></li>
+                <li>Cadeira superior<span id="qtd-ingresso-2">200</span></li>
+                <li>Cadeira inferior<span id="qtd-ingresso-3">400</span></li>
                 
             </ul>
             <img src="./assets/Ingresso.svg" alt="">
