--- a/js-curso-3/ingresso/index.html
+++ b/js-curso-3/ingresso/index.html
@@ -48,7 +48,7 @@
         </section>
     </main>
 
-    <script src="js/app.js"></script>
+    <script src="js/challenges.js"></script>
 </body>
 
 </html>
